temp/has_realesrgan.txt
Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "<string>", line 1
    \ufeff#!/usr/bin/env python3
    ^
SyntaxError: invalid non-printable character U+FEFF
